--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@radix-ui/themes": "^3.1.4",
     "autoprefixer": "^10.4.20",
+    "i18next": "^23.15.2",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-cropper": "^2.3.3",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.2",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
