--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/themes": "^3.1.4",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "i18next": "^23.15.2",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
