--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,10 @@ dependencies {
 	// 3. (Spring rest Doc) REST Docs Implementation
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 	asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
+
+	//GOOGLE OCR
+	implementation 'com.google.cloud:google-cloud-vision:3.34.0'
+
 }
 // (Spring rest Doc) 4. sinppetsDir 추가
 ext {
