구글 OCR 리펙토링 및 API문서화, 사용자 상태관리를 위한 커스텀 어노테이션 생성밑 웹 설정파일 로직 추가

--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.h2database:h2'
+//	runtimeOnly 'com.h2database:h2'
+	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
@@ -63,6 +64,9 @@ dependencies {
 
 	//GOOGLE OCR
 	implementation 'com.google.cloud:google-cloud-vision:3.34.0'
+
+	//PDF 이미지 변환
+	implementation 'org.apache.pdfbox:pdfbox:2.0.29'
 
 }
 // (Spring rest Doc) 4. sinppetsDir 추가
